# strava-goal-visualizer-2

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  STRAVA_APP_DESIGN.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
backend/: Dockerfile  config.py  db.py  dependencies.py  main.py  oauth_state.py
backend/auth/: dependencies.py  exceptions.py  router.py  schemas.py  state_token_service.py  strava_oauth_service.py
backend/clubs/: clubs_service.py  router.py  schemas.py
backend/dashboard/: dashboard_service.py  router.py  schemas.py
backend/db/: db.py  models.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 0001_create_auth_tables.py  0002_create_sync_tables.py  0003_create_goals_table.py  (+3 more)
backend/goals/: goals_service.py  router.py  schemas.py
backend/migrations/: env.py
backend/privacy/: privacy_service.py  router.py  schemas.py
backend/services/: strava_oauth_service.py
backend/shared/: config.py  crypto.py  db.py  exceptions.py  logging.py  models.py  request_id.py
backend/sync/: exceptions.py  router.py  schemas.py  strava_client.py  sync_service.py
docs/: design.md  learnings.md  workflow.md
docs/design/: style.md
docs/epics/: backlog.md
docs/ops/: db-statistics.md  deployment.md  webhook-registration.md
docs/superpowers/plans/: 2026-05-28-react-migration.md  2026-05-31-strava-activity-client.md  2026-05-31-token-refresh.md  2026-06-02-sync-endpoint.md  2026-06-02-tasks-3.3.x-cleanup.md  2026-06-04-task-3-5-dashboard-sync-page.md  2026-06-05-task-5-1-goals-schema.md  2026-06-06-dashboard-domain-refactor.md  2026-06-06-task-2.7.1-rate-limits.md  2026-06-06-task-5-3-personal-progress-computation.md  2026-06-06-task-5.2-goals-endpoints.md  2026-06-06-task-5.4-backend.md  2026-06-06-task-5.4-frontend-chart.md  2026-06-06-task-5.4-frontend-stats-goal.md  2026-06-06-task-5.4.1-pace-chart-fixes.md  2026-06-06-task-5.4.2-css-spec-alignment.md  2026-06-06-task-5.4.3-spinner-consistency.md  2026-06-06-task-5.4.4-page-subtitle.md  2026-06-06-task-5.4.5-css-micro-polish.md  2026-06-07-dashboard-ui-refresh.md  2026-06-07-task-6-1-clubs-schema.md  2026-06-08-task-6.2-club-membership-sync.md  2026-06-09-integration-test-db-infrastructure.md  2026-06-09-task-6.3-get-clubs.md  2026-06-10-task-6-4-club-dashboard.md  2026-06-13-club-pace-chart.md  2026-06-13-deletion-audit-log.md  2026-06-13-task-6.5-club-progress-view.md  2026-06-13-task-6.7-chart-style-alignment.md  2026-06-13-task-7.2-privacy-service.md  2026-06-14-privacy-delete-endpoint.md  2026-06-14-privacy-page.md  2026-06-14-strava-deauth-webhook.md  2026-06-16-achievement-badges.md  2026-06-16-user-nav-dropdown.md  2026-06-18-task-8.2-refine-logging.md  2026-06-18-task-8.3-db-statistics-doc.md  2026-06-19-deploy-readiness-and-guide.md  2026-06-19-epic9-security-hardening.md  2026-06-19-readme-overhaul.md
docs/superpowers/specs/: 2026-05-28-task-1.5.4-orm-pattern.md  2026-05-28-task-2.7-logout-revoke.md  2026-05-28-task-2.8-streamlit-login.md  2026-05-30-task-3-1-activities-sync-state-schema.md  2026-05-31-task-3-2-strava-activity-client.md  2026-05-31-task-3-3-token-refresh.md  2026-06-02-sync-endpoint-design.md  2026-06-02-tasks-3.3.x-cleanup-design.md  2026-06-04-task-3-5-dashboard-sync-design.md  2026-06-05-task-5-1-goals-schema-design.md  2026-06-06-dashboard-domain-refactor-design.md  2026-06-06-task-5-3-personal-progress-computation-design.md  2026-06-06-task-5.2-goals-endpoints-design.md  2026-06-06-task-5.4-personal-dashboard-design.md  2026-06-07-dashboard-ui-refresh-design.md  2026-06-07-task-6-1-clubs-schema-design.md  2026-06-08-task-6.2-club-membership-sync-design.md  2026-06-09-integration-test-db-infrastructure-design.md  2026-06-09-task-6.3-get-clubs-design.md  2026-06-10-task-6-4-club-dashboard-design.md  2026-06-13-club-pace-chart-design.md  2026-06-13-deletion-audit-log-design.md  2026-06-13-task-6.5-club-progress-view-design.md  2026-06-13-task-7.2-privacy-service-design.md  2026-06-13-task-7.3-privacy-export-design.md  2026-06-14-privacy-delete-endpoint-design.md  2026-06-14-privacy-page-design.md  2026-06-14-strava-deauth-webhook-design.md  2026-06-16-achievement-badges-design.md  2026-06-16-user-nav-dropdown-design.md  2026-06-17-dashboard-reorder-inline-badges-design.md  2026-06-18-observability-basics-design.md  2026-06-19-deployment-guide-design.md  2026-06-19-epic9-security-hardening-design.md  2026-06-19-readme-overhaul-design.md
frontend/: Dockerfile  app.py  config.py  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  theme.ts
frontend/src/api/: client.ts
frontend/src/components/: BadgeIcon.tsx  BadgeRow.tsx  ClubPaceChart.tsx  GdprFooter.tsx  PaceChart.tsx
frontend/src/config/: site.ts
frontend/src/pages/: ClubsPage.tsx  DashboardPage.tsx  HomePage.tsx  LoginPage.tsx  PrivacyPage.tsx  PrivacyPolicyPage.tsx  TermsPage.tsx
scripts/: stats.sql
tests/: conftest.py
tests/backend/: test_crypto.py  test_oauth_state.py
tests/backend/auth/: test_logout_revoke.py  test_session_me.py  test_state_token_service.py  test_strava_oauth_service.py
tests/backend/clubs/: test_clubs_router.py  test_clubs_service.py
tests/backend/dashboard/: test_club_dashboard_router.py  test_club_dashboard_service.py  test_dashboard_router.py  test_dashboard_service.py
tests/backend/goals/: test_goal_service.py  test_goals_router.py
tests/backend/helpers/: test_crypto.py
tests/backend/privacy/: test_deauth_integration.py  test_privacy_router.py  test_privacy_service.py
tests/backend/services/: test_state_token_service.py  test_strava_oauth_service.py
tests/backend/shared/: test_clubs_models.py  test_config.py  test_crypto.py  test_deletion_event_model.py  test_goals_model.py  test_models.py  test_request_id.py  test_sync_models.py
tests/backend/sync/: test_strava_client.py  test_sync_router.py  test_sync_service.py
