[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strava-goal-visualizer"
version = "0.1.0"
description = "Strava-integrated running goal visualizer with Streamlit frontend and FastAPI backend"
requires-python = ">=3.12"

[tool.uv]

# ---------------------------------------------------------------------------
# Tell hatchling which directories to package (used by pip install -e .)
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["backend", "frontend"]

# ---------------------------------------------------------------------------
# Dependency groups (uv workspaces / uv pip install --group)
# ---------------------------------------------------------------------------
[dependency-groups]
backend = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "httpx>=0.27",
    "cryptography>=42.0",
    "python-dotenv>=1.0",
]
frontend = [
    "streamlit>=1.36",
]
dev = [
    "pytest>=8.2",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter (replaces flake8, isort, pyupgrade, black)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["backend", "frontend"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "ANN", # flake8-annotations (type hints)
    "RUF", # ruff-specific rules
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
]
ignore = [
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
    "S101",   # use of assert — fine in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy — static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
pretty = true
show_error_codes = true
exclude = ["alembic/", "tests/"]

[[tool.mypy.overrides]]
module = ["streamlit.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
